VR: Update WebVR Vertex shader to use ELEMENT_ARRAY_BUFFERS

#Clang format handles casts in shaders incorrectly.
NOPRESUBMIT=true

Bug: 739397
Change-Id: I2e517bc9a3ad79cc0d220263f8f9102fc90fe382
Reviewed-on: https://chromium-review.googlesource.com/560756
Reviewed-by: Ian Vollick <vollick@chromium.org>
Commit-Queue: Michael Thiessen <mthiesse@chromium.org>
Cr-Commit-Position: refs/heads/master@{#484384}
Former-commit-id: 6ef1492232a804ac0eda21c129f2c370280e90fb